# multi-robot_task_allocation

./: .gitignore  README.md
max_min_lp/: CMakeLists.txt  package.xml
max_min_lp_core/: CMakeLists.txt  package.xml
max_min_lp_core/include/max_min_lp_core/: MaxMinLPCore.hpp  MaxMinLPDecentralizedCore.hpp  MaxMinLPSequentialCore.hpp
max_min_lp_core/src/: MaxMinLPCore (copy).cpp  MaxMinLPCore.cpp  MaxMinLPDecentralizedCore.cpp  MaxMinLPSequentialCore.cpp
max_min_lp_demo/: CMakeLists.txt  package.xml
max_min_lp_demo/data/t100/t100d2/10_100_2/: output_1.txt  output_10.txt  output_11.txt  output_12.txt  output_13.txt  output_14.txt  output_15.txt  output_16.txt  output_17.txt  output_18.txt  output_19.txt  output_2.txt  output_20.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt  output_8.txt  output_9.txt
max_min_lp_demo/data/t100/t100d2/20_100_2/: output_1.txt  output_10.txt  output_11.txt  output_12.txt  output_13.txt  output_14.txt  output_15.txt  output_16.txt  output_17.txt  output_18.txt  output_19.txt  output_2.txt  output_20.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt  output_8.txt  output_9.txt
max_min_lp_demo/data/t100/t100d2/30_100_2/: output_1.txt  output_10.txt  output_11.txt  output_12.txt  output_13.txt  output_14.txt  output_15.txt  output_16.txt  output_17.txt  output_18.txt  output_19.txt  output_2.txt  output_20.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt  output_8.txt  output_9.txt
max_min_lp_demo/data/t100/t100d2/40_100_2/: output_1.txt  output_10.txt  output_11.txt  output_12.txt  output_13.txt  output_14.txt  output_15.txt  output_16.txt  output_17.txt  output_18.txt  output_19.txt  output_2.txt  output_20.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt  output_8.txt  output_9.txt
max_min_lp_demo/data/t100/t100d2/50_100_2/: output_1.txt  output_10.txt  output_11.txt  output_12.txt  output_13.txt  output_14.txt  output_15.txt  output_16.txt  output_17.txt  output_18.txt  output_19.txt  output_2.txt  output_20.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt  output_8.txt  output_9.txt
max_min_lp_demo/data/t100/t100d4/10_100_4/: output_1.txt  output_10.txt  output_11.txt  output_12.txt  output_13.txt  output_14.txt  output_15.txt  output_16.txt  output_17.txt  output_18.txt  output_19.txt  output_2.txt  output_20.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt  output_8.txt  output_9.txt
max_min_lp_demo/data/t100/t100d4/20_100_4/: output_1.txt  output_10.txt  output_11.txt  output_12.txt  output_13.txt  output_14.txt  output_15.txt  output_16.txt  output_17.txt  output_18.txt  output_19.txt  output_2.txt  output_20.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt  output_8.txt  output_9.txt
max_min_lp_demo/include/max_min_lp_demo/: MaxMinLPDemo.hpp
max_min_lp_demo/launch/: test_max_min_lp.launch
max_min_lp_demo/src/: MaxMinLPDemo.cpp
max_min_lp_demo/yaml/: test_example.yaml  test_example_2.yaml  test_example_3.yaml  test_example_num_targets.yaml  test_paper_example.yaml
max_min_lp_experiment/: CMakeLists.txt  README.md  package.xml
max_min_lp_experiment/include/max_min_lp_experiment/: GreedyCentralNode.hpp  GreedyRobotNode.hpp  TargetNode.hpp
max_min_lp_experiment/launch/: greedy_central.launch
max_min_lp_experiment/src/: GreedyCentralNode.cpp  GreedyRobotNode.cpp  TargetNode.cpp
max_min_lp_experiment/srv/: RobotRequest.srv  TargetRequest.srv
max_min_lp_experiment/yaml/: target_model.yaml
max_min_lp_msgs/: CMakeLists.txt  package.xml
max_min_lp_msgs/msg/: connect_exist.msg  general_node.msg  general_node_array.msg  layered_node.msg  layered_node_array.msg  primitive_node.msg  server_to_robots.msg  server_to_robots_array.msg  target_node.msg
max_min_lp_simulation/: CMakeLists.txt  package.xml
max_min_lp_simulation/data/: results.txt  robots_1.txt  robots_2.txt  robots_3.txt  robots_4.txt  robots_5.txt  targets.txt
max_min_lp_simulation/data/greedy/: results.txt  results_for_debug.txt  robots_1.txt  robots_2.txt  robots_3.txt  robots_4.txt  robots_5.txt
max_min_lp_simulation/data/local/: results.txt  robots_1.txt  robots_2.txt  robots_3.txt  robots_4.txt  robots_5.txt  targets.txt
max_min_lp_simulation/gazebo_model/world/: target_spawn.world  target_spawn_journal.world
max_min_lp_simulation/include/max_min_lp_simulation/: MaxMinLPCentralNode.hpp  MaxMinLPCentralNodeGreedy.hpp  MaxMinLPCentralNodeSimulation.hpp  MaxMinLPGreedyCentralNode.hpp  MaxMinLPGreedyRobotNode.hpp  MaxMinLPRobotNode.hpp  MaxMinLPRobotNodeGreedy.hpp  MaxMinLPRobotNodeSimulation.hpp  RobotGreedyJournal.hpp  apply_motion_primitive.hpp  apply_motion_primitive_journal.hpp  get_odom.hpp  kalman.hpp
max_min_lp_simulation/launch/: five_robot_twenty_target_case.launch  greedy_robots_journal.launch  greedy_server_to_robots.launch  journal.launch  motion_primitive_test.launch  server_to_robots.launch  simulation_server_to_robots.launch  single_robot_case.launch  test_motion_primitive.launch  three_robot_four_target_case.launch  three_robot_four_target_case_failure_case.launch  two_robot_three_target_case.launch
max_min_lp_simulation/launch/includes/: kobuki.launch.xml  moving_target.launch.xml
max_min_lp_simulation/src/: MaxMinLPCentralNode.cpp  MaxMinLPCentralNodeGreedy.cpp  MaxMinLPCentralNodeSimulation.cpp  MaxMinLPGreedyCentralNode.cpp  MaxMinLPGreedyRobotNode.cpp  MaxMinLPRobotNode.cpp  MaxMinLPRobotNodeGreedy.cpp  MaxMinLPRobotNodeSimulation.cpp  RobotGreedyJournal.cpp  animated_box.cc  animated_box_journal.cc  apply_motion_primitive.cpp  apply_motion_primitive_journal.cpp  get_odom.cpp  get_result_target_num.cpp  get_target_odom.cpp  get_target_odom_journal.cpp  kalman.cpp  max_min_lp_simulation.cpp  motion_primitive_generator.cpp
max_min_lp_simulation/srv/: GetOdom.srv  GetTotalNumTarget.srv  MessageRequest.srv  MotionPrimitiveRequest.srv  MoveRobot.srv
max_min_lp_simulation/urdf/: box.urdf.xacro  box_library.urdf.xacro  kobuki.urdf.xacro
(+1393 files in other folders)
