<?xml version="1.0"?>
<package>
  <name>max_min_lp_core</name>
  <version>0.0.0</version>
  <description>The max_min_lp_core package</description>
  <maintainer email="yooncs8@vt.edu">Yoonchang Sung</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>max_min_lp_msgs</build_depend>
  <run_depend>max_min_lp_msgs</run_depend>
</package>