<?xml version="1.0"?>
<package>
  <name>max_min_lp_demo</name>
  <version>0.0.0</version>
  <description>The local algorithm-based max min linear programs for the target allocation</description>
  <maintainer email="yooncs8@vt.edu">Yoonchang Sung</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>max_min_lp_msgs</build_depend>
  <build_depend>max_min_lp_core</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>max_min_lp_msgs</run_depend>
  <run_depend>max_min_lp_core</run_depend>

  <export>
  </export>
</package>