<?xml version="1.0"?>
<package>
  <name>max_min_lp_simulation</name>
  <version>0.0.0</version>
  <description>The max_min_lp_simulate package</description>
  <maintainer email="yooncs8@vt.edu">Yoonchang Sung</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>