<?xml version="1.0"?>
<package>
  <name>max_min_lp_simulation</name>
  <version>0.0.0</version>
  <description>The max_min_lp_simulate package</description>
  <maintainer email="yooncs8@vt.edu">Yoonchang Sung</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>max_min_lp_msgs</build_depend>
  <build_depend>max_min_lp_core</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>max_min_lp_msgs</run_depend>
  <run_depend>max_min_lp_core</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>eigen</run_depend>
</package>